@@ -1,13 +1,11 @@
 package main.java.com.yutgame.view.swing;
 
 import main.java.com.yutgame.controller.YutGameController;
-import main.java.com.yutgame.controller.YutGameFactory;
+import main.java.com.yutgame.dto.PieceDecisionResult;
 import main.java.com.yutgame.model.*;
-import main.java.com.yutgame.view.swing.BoardPanel;
 
 import javax.swing.*;
 import java.awt.*;
-import java.util.ArrayList;
 import java.util.List;
 
 import static main.java.com.yutgame.model.YutThrowResult.*;
@@ -18,7 +16,6 @@ public class SwingYutGameView extends JFrame {
     private JButton randomThrowButton;
     private JButton manualThrowButton;
     private boolean isRandomThrow = false;
-    private boolean containsStart = false;
     private YutGameController controller;
     private int playerCount;
     private int pieceCount;
@@ -64,17 +61,6 @@ public class SwingYutGameView extends JFrame {
             System.exit(0);  // 프로그램 종료
         }
 
-        // 윷 게임 생성 (컨트롤러 이용)
-        try {
-//            this.game = YutGameFactory.createGame(playerCount, pieceCount, boardChoice);
-//            this.controller = new YutGameController();
-            //controller.setGame(YutGameController.createGame(playerCount, pieceCount, boardChoice));
-        } catch (IllegalArgumentException e) {
-            JOptionPane.showMessageDialog(null, e.getMessage());
-            System.exit(0);
-        }
-        // ----------------------------------------------------------
-
         // --- UI 세팅 (기존 SwingYutGameView 생성자 본문) ---
         setTitle("Swing Yut Game");
         setSize(700, 800);
@@ -88,14 +74,7 @@ public class SwingYutGameView extends JFrame {
         topPanel.add(manualThrowButton);
 
         add(topPanel, BorderLayout.NORTH);
-
-//        boardPanel = new BoardPanel();
-        // add(boardPanel, BorderLayout.CENTER);
-
         initButtonListeners();
-
-        //controller.startGame();
-        // ----------------------------------------------------------
     }
 
     public int getPlayerCount() {
@@ -198,39 +177,27 @@ public class SwingYutGameView extends JFrame {
     private void applyThrowSelections(List<YutThrowResult> results) {
         Player currentPlayer = controller.getCurrentPlayer();
 
+        // controller로 이동
+
         // 첫 번째 결과가 빽도이고, 모든 말이 아직 출발하지 않은 경우 → 턴 넘기기
-        if (results.size() == 1 && results.get(0) == YutThrowResult.BAK_DO) {
-            boolean allUnstarted = currentPlayer.getPieces().stream()
-                    .allMatch(p -> p.getCurrentNode() == null);
-            if (allUnstarted) {
+        if (results.size() == 1 && results.getFirst() == YutThrowResult.BAK_DO) {
+            boolean notStarted = controller.getNotStarted(currentPlayer);
+
+            if (notStarted) {
+
                 JOptionPane.showMessageDialog(this, "출발하지 않은 상태에서는 빽도를 사용할 수 없습니다. 턴을 넘깁니다.");
+
                 controller.nextTurn();
                 boardPanel.repaint();
                 return;
             }
         }
 
-        if (results.size() > 1) {
+        // 윷이나 모가 나온 경우 / 잡은 경우
+        if (results.size() > 1) { // TODO: 얘 좀 이상함
             while (!results.isEmpty()) {
-//                String[] options = results.stream()
-//                        .map(Enum::name)
-//                        .toArray(String[]::new);
-                String[] options = new String[results.size()];
-                for (int i = 0; i < results.size(); i++) {
-                    if (results.get(i) == BAK_DO) {
-                        options[i] = "백도";
-                    } else if (results.get(i) == DO) {
-                        options[i] = "도";
-                    } else if (results.get(i) == GAE) {
-                        options[i] = "개";
-                    } else if (results.get(i) == GEOL) {
-                        options[i] = "걸";
-                    } else if (results.get(i) == YUT) {
-                        options[i] = "윷";
-                    } else if (results.get(i) == MO) {
-                        options[i] = "모";
-                    }
-                }
+                // TODO: 한글로 바꾸는 부분 매개변수: results, return -> options String[]
+                 String[] options = controller.getChoiceLetters(results);
 
                 int choice = JOptionPane.showOptionDialog(
                         this,
@@ -245,21 +212,17 @@ public class SwingYutGameView extends JFrame {
 
                 YutThrowResult chosen = results.get(choice);
                 // results > 1이고 빽도가 포함되어 있을 때 처리
-                boolean allUnstarted = currentPlayer.getPieces().stream()
-                        .allMatch(p -> p.getCurrentNode() == null);
-                if (chosen == YutThrowResult.BAK_DO && allUnstarted) {
+                boolean notStarted = controller.getNotStarted(currentPlayer);
+
+                if (chosen == YutThrowResult.BAK_DO && notStarted) {
                     JOptionPane.showMessageDialog(this, "출발하지 않은 상태에서는 빽도를 선택할 수 없습니다.");
                     continue; // 다시 선택창을 띄움
                 }
 
-                // ✨ 사용자가 선택 안 하고 닫았을 때 예외 방지
-                if (choice == -1) {
-                    JOptionPane.showMessageDialog(this, "이동 선택이 취소되었습니다. 턴을 넘깁니다.");
-                    return;
-                }
 
                 YutThrowResult chosenResult = results.remove(choice);
                 moveNode(currentPlayer, chosenResult);
+
                 if (controller.isGameOver()) {
                     break;
                 }
@@ -277,15 +240,9 @@ public class SwingYutGameView extends JFrame {
 
     private void moveNode(Player currentPlayer, YutThrowResult chosenResult) {
         Piece selected = selectPiece(currentPlayer, chosenResult);
+
         if (selected != null) {
-            int steps = switch (chosenResult) {
-                case BAK_DO -> -1;
-                case DO      -> 1;
-                case GAE     -> 2;
-                case GEOL    -> 3;
-                case YUT     -> 4;
-                case MO      -> 5;
-            };
+            int steps = controller.getSteps(chosenResult);
 
             BoardNode curr = selected.getCurrentNode();
             if (curr == null) curr = controller.getBoard().getStartNode();
@@ -293,88 +250,30 @@ public class SwingYutGameView extends JFrame {
             if (steps < 0) {
                 List<BoardNode> prevs = controller.getBoard().getPossiblePreviousNodes(curr);
                 BoardNode dest = prevs.size() == 1 ? prevs.get(0) : chooseDestination(prevs, "빽도 이동", -1);
-                if (dest != null) controller.movePiece(selected, dest, containsStart);
+                if (dest != null) controller.movePiece(selected, dest, controller.getContainsStartNode());
             } else {
                 List<BoardNode> cans = controller.getBoard().getPossibleNextNodes(curr, steps);
                 List<BoardNode> path = controller.getBoard().getPaths();
-                List<List<BoardNode>> paths = splitPath(path, steps);
+                List<List<BoardNode>> paths = controller.splitPath(path, steps);
 
-                for (List<BoardNode> boardNodes : paths) {
-                    for (BoardNode boardNode : boardNodes) {
-                        System.out.println(boardNode.getId());
-                    }
-                    System.out.println();
-                }
 
-                int canFinishIndex = -1; // 완주 가능한 버튼 index
-                for (int i = 0; i < paths.size(); i++) {
-                    for (BoardNode boardNode : path) {
-                        if (boardNode.getId().equals("START_NODE")) {
-                            canFinishIndex = i;
-                        }
-                    }
-                }
+                int canFinishIndex = controller.checkCanFinishIndex(paths, path);
 
                 BoardNode dest;
-
-                if (isCrossroad(curr) && cans.size() > 1) {
+                if (controller.isCrossroad(curr) && cans.size() > 1) {
                     dest = chooseDestination(cans, "갈림길 선택", canFinishIndex);
                 } else {
                     dest = cans.isEmpty() ? null : cans.get(0);
                 }
                 if (dest != null) {
                     // 완주 처리 관련 로직 : path에 start가 있는가
-                    String destId = dest.getId();  // 선택된 목적지 노드의 ID
-                    int destIndex = -1;
-
-                    for (int i = 0; i < path.size(); i++) {
-                        if (destId.equals(path.get(i).getId())) {
-                            destIndex = i;
-                            break;
-                        }
-                    }
-                    if (destIndex >= 0 && destIndex == steps -1) {   // 갈림길 1 선택
-                        List<BoardNode> trimmed = new ArrayList<>(path.subList(0, steps));
-                        path.clear();
-                        path.addAll(trimmed);
-                    } else if (destIndex >= 0 && destIndex > steps -1) {  // 이외의 갈림길 선택
-                        List<BoardNode> trimmed = new ArrayList<>(path.subList(destIndex - steps + 1, destIndex + 1));
-                        path.clear();
-                        path.addAll(trimmed);
-                    } else {
-                        System.err.println("dest가 path에 없거나 steps 길이가 부족함.");
-                    }
-                    // 콘솔 출력용 추가
-                    /*
-                    * System.out.println("노드 탐색 결과 (선택 길)");
-                    for (BoardNode cur : path) {
-                        System.out.println(cur.getId());
-                    }*/
-                    containsStart = path.stream()
-                            .anyMatch(node -> "START_NODE".equals(node.getId()));
-                    // System.out.println("START_NODE 포함 여부: " + containsStart);  //디버깅용
-                    controller.getBoard().pathClear();
-
-                    controller.movePiece(selected, dest, containsStart);
+                    controller.isFinished(selected, dest, path, steps);
                 }
             }
             boardPanel.repaint();
         }
     }
 
-    private boolean isCrossroad(BoardNode node) {
-        String id = node.getId();
-        return "CENTER".equals(id) || "A".equals(id) || "B".equals(id) || "C".equals(id) || "D".equals(id) || "E".equals(id);
-    }
-
-    private List<List<BoardNode>> splitPath(List<BoardNode> path, int step) {
-        List<List<BoardNode>> chunks = new ArrayList<>();
-        for (int i = 0; i < path.size(); i += step) {
-            int end = Math.min(i + step, path.size());
-            chunks.add(new ArrayList<>(path.subList(i, end)));
-        }
-        return chunks;
-    }
 
 
     /**
@@ -386,53 +285,12 @@ public class SwingYutGameView extends JFrame {
      *      · 그 외 → 기존 안내 후 턴 패스
      */
     private Piece selectPiece(Player player, YutThrowResult chosenResult) {
-        List<Piece> allPieces = player.getPieces();
+         PieceDecisionResult pieceDecisionResult  = controller.getPieceDecisions(player, chosenResult);
+        List<Piece> choices = pieceDecisionResult.choices();
+        List<String> pieceDecisions = pieceDecisionResult.decisions();
 
-        boolean isBakdo = chosenResult == YutThrowResult.BAK_DO;
-        BoardNode start = controller.getBoard().getStartNode();
 
-        /* 1) 선택 리스트 준비 */
-        List<String> descs  = new ArrayList<>();
-        List<Piece>  choices = new ArrayList<>();
-
-        // 1-A) 미출발 말 1개(빽도 제외)
-        if (!isBakdo) {
-            for (Piece p : allPieces) {
-                if (!p.isFinished() && p.getCurrentNode() == null) {
-                    descs.add("새로운 말");
-                    choices.add(p);
-                    break;                       // 하나만
-                }
-            }
-        }
-
-        for (int i = 0; i < allPieces.size(); i++) {
-            for (int j = i + 1; j < allPieces.size(); j++) {
-                BoardNode curr = allPieces.get(i).getCurrentNode();
-                if (curr != null && allPieces.get(j).getCurrentNode() != null) {
-                    if (allPieces.get(j).getCurrentNode().equals(curr)) {
-                        allPieces.remove(allPieces.get(j));
-                    }
-                }
-            }
-        }
-
-        // 1-B) 보드 위 말들
-        for (Piece p : allPieces) {
-            if (p.isFinished()) continue;
-            BoardNode node = p.getCurrentNode();
-            if (node == null) continue;
-
-            if (isBakdo) {
-                boolean canBack = !node.equals(start) && p.getPathHistory().size() >= 2;
-                if (!canBack) continue;          // 뒤로 못 가면 제외
-            }
-            descs.add("말 (" + node.getId() + ")");
-            choices.add(p);
-        }
-
-        if (player.allPiecesFinished()){
-            System.out.println("all finish");
+        if (controller.allPiecesFinished(player)){
             controller.checkWin();
             if (controller.isGameOver()) {
                 JOptionPane.showMessageDialog(this, "승리자: " + controller.getWinner().getName());
@@ -441,8 +299,8 @@ public class SwingYutGameView extends JFrame {
             return null;
         }else {
             /* 2) 선택 가능한 말이 없다 → UI 메시지 & 턴 패스 */
-            if (choices.isEmpty()) {
-                String msg = isBakdo
+            if (pieceDecisions.isEmpty()) {
+                String msg = controller.checkBaekdo(chosenResult)
                         ? "시작지점에서 빽도를 사용하실 수 없습니다."
                         : "이 플레이어는 이동 가능한 말이 없습니다.";
                 JOptionPane.showMessageDialog(this, msg, "선택 불가", JOptionPane.WARNING_MESSAGE);
@@ -454,23 +312,22 @@ public class SwingYutGameView extends JFrame {
             }
 
             /* 3) 실제 선택 다이얼로그 */
-            int ch = JOptionPane.showOptionDialog(
+            int choice = JOptionPane.showOptionDialog(
                     this,
                     "이동할 말을 선택하세요 (" + player.getName() + ")",
                     "말 선택",
                     JOptionPane.DEFAULT_OPTION,
                     JOptionPane.PLAIN_MESSAGE,
                     null,
-                    descs.toArray(new String[0]),
-                    descs.get(0)
+                    pieceDecisions.toArray(new String[0]),
+                    pieceDecisions.getFirst()
             );
-
-            return (ch < 0 || ch >= choices.size()) ? null : choices.get(ch);
+            return (choice < 0 || choice >= choices.size()) ? null : choices.get(choice);
         }
     }
 
     private BoardNode chooseDestination(List<BoardNode> cands, String title, int index) {
-        if (cands.size() == 1) return cands.get(0);
+        if (cands.size() == 1) return cands.getFirst();
         String[] opts = cands.stream().map(BoardNode::getId).toArray(String[]::new);
         if (index >= 0) {
             opts[index] = "Finish";
